# signature-cropping

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  implementation_plan.html  implementation_plan.md  pyproject.toml
.claude/: settings.local.json
bench/: latency.py
deploy/: README.md  ecs-task-definition.json
docs/: ARCHITECTURE.md  model-weights-fetch.md
models/processor/: preprocessor_config.json
scripts/: eval_dataset.py  export_onnx.py  fetch_pretrained.py
src/sigcrop/: __init__.py  config.py  errors.py  logging.py
src/sigcrop/api/: __init__.py  app.py  deps.py  routes_crop.py  routes_health.py  schemas.py
src/sigcrop/cli/: __init__.py  main.py
src/sigcrop/mcp/: __init__.py  server.py  tools.py
src/sigcrop/models/: __init__.py  registry.py
src/sigcrop/pipeline/: __init__.py  detector.py  encode.py  heuristics.py  ingest.py  postprocess.py  preprocess.py  run.py
src/sigcrop/pipeline/detectors/: __init__.py  _session.py  base.py  conditional_detr.py  yolov8.py
tests/: conftest.py
tests/bench/: conftest.py  test_latency_contract.py  test_latency_runtime.py
tests/fixtures/: _synthesize.py
tests/integration/: test_api_routes.py  test_detectors_on_samples.py  test_pipeline_e2e.py
tests/mcp/: test_mcp_tools.py
tests/unit/: test_encode.py  test_heuristics.py  test_ingest.py  test_postprocess.py  test_preprocess.py  test_schemas.py  test_yolov8_decode.py
